Hope can fix on IE, not tested

--- a/htdocs/portal/index.html
+++ b/htdocs/portal/index.html
@@ -687,6 +687,7 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+<script src="assets/js/ie-console.js"></script>
 <script src="assets/js/jquery-1.9.1.min.js"></script>
 <script src="assets/js/handlebars.js"></script>
 <script src="assets/js/ember-1.0.0-rc.1.js"></script>
